<resources>
    <string name="app_name">Kiểm soát xe quân sự</string>
    <string name="license_plates">Biển số xe</string>
    <string name="read_image">Đọc Biển Số Xe</string>
    <string name="recognizer_license_plates_vehicle">NHẬN DẠNG BIỂN SỐ</string>
    <string name="search_license_plates_vehicle">TRA CỨU BIỂN SỐ</string>
    <string name="notebook">SỔ TAY LÁI XE</string>
    <string name="violation_records">BIÊN BẢN VI PHẠM</string>
    <string name="demo">item</string>
    <string name="select_type_car">Chọn Loại Xe</string>
    <string name="select_car">Chọn Xe</string>
    <string name="search">Tìm Kiếm</string>
    <string name="detail_part">Chọn Công Tác Con</string>
    <string name="select_part">Chọn Nhóm Công Tác</string>
    <string name="select_part_sub">Chọn Công Tác Cháu</string>
    <string name="camera_permission_error">Camera Permission Error</string>


    <string name="id">Mã phụ tùng:</string>
    <string name="name">Tên phụ tùng:</string>
    <string name="style">Quy cách:</string>
    <string name="unit">Đơn vị tính:</string>
    <string name="quantity">Số lượng:</string>
    <string name="price">Giá:</string>
    <string name="close">Đóng</string>
    <string name="detail_specification">Chi Tiết Phụ Tùng</string>
    <string name="vnd">VND</string>
    <string name="download">Tải dữ liệu...</string>
    <string name="waiting">Vui lòng đợi...</string>
    <string name="progress">Đang xử lý...</string>
    <string name="take_photo">Chụp ảnh</string>
    <string name="gallery">Bộ sưu tập</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="choose_image_from">Chọn ảnh từ</string>
    <string name="quality_image_bad">Chất lượng ảnh chưa tốt</string>
    <string name="not_a_license_plate">Không phải định dạng biển số xe</string>
    <string name="not_a_photo">Bạn chưa chọn ảnh</string>
    <string name="enter_driving_license">Nhập số giấy phép lái xe</string>
    <string name="enter_license_plates">Nhập biển số xe</string>
    <string name="search_driving_license">TRA CỨU GIẤY PHÉP LÁI XE</string>
    <string name="search_infor">Tra cứu thông tin</string>
    <string name="empty_driving_license">Bạn chưa nhập số giấy phép lái xe</string>
    <string name="number_driving_license">Số giấy phép:</string>
    <string name="name_driver">Tên lái xe:</string>
    <string name="birthday">Ngày sinh:</string>
    <string name="address">Địa chỉ:</string>
    <string name="code_person">Số chứng minh thư:</string>
    <string name="code_date_ranger">Ngày cấp:</string>
    <string name="code_issued_by">Nơi cấp:</string>
    <string name="date_of_elistment">Ngày nhập ngũ:</string>
    <string name="date_of_recuitment">Ngày tuyển dụng:</string>
    <string name="kilometers_driven">Số km đã lái:</string>
    <string name="time_has_drove">Thời gian lái:</string>
    <string name="number_officers">SHSQ-SHQN:</string>
    <string name="rank_driven">Hạng lái xe:</string>
    <string name="date_register">Ngày cấp:</string>
    <string name="detail">Chi tiết</string>
    <string name="infor_vehicle">Thông tin xe</string>

    <string name="license_plate">Biển số xe:</string>
    <string name="category_vehicle">Nhóm xe:</string>
    <string name="number_register">Số đăng kí:</string>
    <string name="date_registers">Ngày đăng kí:</string>
    <string name="frame_number">Số khung:</string>
    <string name="machine_number">Số máy:</string>
    <string name="source">Nguồn:</string>
    <string name="rank_quality">Phân cấp chất lượng:</string>
    <string name="date_increase">Ngày tăng:</string>
    <string name="date_using">Ngày bắt đầu sử dụng:</string>
    <string name="notes">Ghi chú:</string>
    <string name="organzitation">Đơn vị:</string>
    <string name="not_notes">Không có ghi chú</string>
    <string name="not_plates">Biển giả</string>
    <string name="empty_license_plates">Bạn chưa nhập biển số xe</string>
    <string name="not_data_license_plates">Không có dữ liệu biển này</string>
    <string name="short_license_plates">Biển xe quân đội phải ít nhất 6 kí tự</string>
    <string name="not_data_driving_license">Không có số đăng ký này</string>
    <string name="not_driving_license">Số đăng kí giả</string>


</resources>
