<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@color/colorWhile">

    <TextView
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/detail_specification"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/ic_infor"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/id"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/name"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llStyle"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/style"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/unit"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/quantity"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/price"
            android:textColor="@color/colorBlack" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/tvClose"
        android:background="@color/colorWhile"
        android:text="@string/close"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>