<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitleNoteBook"
            android:layout_width="wrap_content"
            android:drawablePadding="5dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/search_driving_license"
            android:textColor="@color/colorWhile"
            android:textSize="18sp" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="15dp"
        android:id="@+id/tilDrivingLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edDrivingLicense"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_driving_license"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_search"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/EditTextTheme"
            tools:ignore="RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/btnSearch"
        android:layout_gravity="center"
        android:text="@string/search_infor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>